fix checkbox label on mobile

--- a/src/css/community_settings.less
+++ b/src/css/community_settings.less
@@ -28,6 +28,9 @@
       font-weight: normal;
       font-size: 14px;
       line-height: 32px;
+      @media (max-width: @screen-xs-max) {
+        line-height: initial;
+      }
     }
     .right {
       text-align: right;
